py.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: py-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: py-app
  template:
    metadata:
      labels:
        app: py-app
    spec:
      containers:
      - name: py-app
        image: saliih07/pythoncluster:final
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: py-service
spec:
  selector:
    app: py-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
